# jami-pi

./: .gitignore  AGENTS.md  LICENSE  README.md  ack.py  bot.py  config.py  formatting.py  jami_client.py  pi_client.py  pyproject.toml  system-prompt.md
tests/: test_ack.py  test_config.py  test_formatting.py  test_jami_client.py  test_pi_client.py
